--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
         "react-icons": "^4.3.1",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.0",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.7",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
